--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -52,7 +52,7 @@
   "find_your_desired_food_by_categories": "ابحث عن الطعام الذي تريده حسب الفئات",
   "popular_foods_nearby": "طعام شعبي قريب",
   "restaurants": "مطاعم",
-  "all_restaurants": "جميع المطاعم",
+  "all_restaurants": "جميع البائعين",
   "please_enter_mobile": "الرجاء إدخال رقم هاتفك المحمول حتى نتمكن من مساعدتك في استعادة كلمة المرور الخاصة بك.",
   "done": "منجز",
   "enter_new_password": "أدخل كلمة المرور الجديدة وقم بالتأكيد.",
@@ -96,7 +96,7 @@
   "enter_promo_code": "إدخال الرمز الترويجي",
   "apply": "تطبيق",
   "delivery_type": "خيار تسليم",
-  "home_delivery": "توصيل منزلي",
+  "home_delivery": "التوصيل",
   "take_away": "يبعد",
   "item_price": "سعر السلعة",
   "vat_tax": "ضريبة القيمة المضافة",
@@ -163,7 +163,7 @@
   "pick_address": "اختر العنوان",
   "are_you_sure_to_reset": "هل أنت متأكد من إزالة؟",
   "if_you_change_location": "لديك بعض الأطعمة في عربة التسوق الخاصة بك. إذا قمت بتغيير موقعك ، فستتم إعادة تعيين عربة التسوق والبيانات الأخرى المتعلقة بموقع التسليم الحالي.",
-  "if_you_continue": "إذا تابعت ، ستتم إزالة كل طعامك السابق من عربة التسوق.",
+  "if_you_continue": "لديك عنصر من بائع آخر في العربة. إذا تابعت، سيتم إزالة جميع العناصر السابقة من العربة.",
   "yes_and_continue": "نعم ومتابعة",
   "total_order": "من أجل الكاملة",
   "dark_theme": "مظهر داكن",
@@ -190,7 +190,7 @@
   "order_placed": "تم الطلب",
   "order_confirmed": "تم قبول الطلب",
   "preparing_food": "تحضير الطعام",
-  "food_on_the_way": "الطعام على الطريق",
+  "food_on_the_way": "الطلب في الطريق",
   "view_on_map": "عرض على الخريطة",
   "back_to_home": "العودة إلى المنزل",
   "trip_route": "طريق الرحلة",
@@ -339,9 +339,9 @@
   "password_updated_successfully": "تم تحديث كلمة السر بنجاح",
   "new_address_added_successfully": "تمت إضافة العنوان الجديد بنجاح",
   "restaurant_reviews": "مراجعات المطعم",
-  "popular_restaurants": "مطاعم شعبية",
+  "popular_restaurants": "البائع الشهير",
   "new_on": "جديد",
-  "restaurant_is_closed": "المطعم مغلق",
+  "seller_is_closed": "البائع مغلق",
   "id": "هوية شخصية",
   "no_review_found": "لم يتم العثور على مراجعة",
   "delivery_time": "موعد التسليم",
@@ -594,7 +594,7 @@
   "vehicle_type": "نوع السيارة",
   "please_select_vehicle_for_the_deliveryman": "الرجاء تحديد مركبة لتوصيله",
   "you_did_not_select_select_any_reason": "لم تحدد تحديد أي سبب.",
-  "recently_viewed_restaurants": "المطاعم التي شوهدت مؤخرًا",
+  "recently_viewed_restaurants": "البائع الذي تمت مشاهدته مؤخرًا",
   "order_type": "نوع الطلب",
   "regular_order": "ترتيب منتظم",
   "place_an_order_and_enjoy": "تقديم طلب واستمتع",
@@ -804,7 +804,7 @@
   "convert_to_currency_now": "اعتناق العملة الآن",
   "earn_money_to_your_wallet_by_completing_the_offer_challenged": "كسب المال لمحفظتك من خلال إكمال العرض والتحدي",
   "convert_your_loyalty_points_into_wallet_money": "تحويل نقاط الولاء الخاصة بك إلى أموال محفظة",
-  "amin_also_reward_their_top_customers_with_wallet_money": "كما يكافئ أمين عملائهم الكبار بأموال محفظة",
+  "amin_also_reward_their_top_customers_with_wallet_money": "يقوم أمين أيضًا بمكافأة كبار المشترين بأموال المحفظة",
   "send_your_wallet_money_while_order": "أرسل أموال محفظتك أثناء الطلب",
 
   "wallet_history": "محفوظات المحفظة",
@@ -905,7 +905,7 @@
   "here_is_what_you_might_like_to_test": "هنا ما قد ترغب في اختباره",
   "restaurant_url_copied": "تم نسخ عنوان URL للمطعم",
   "find_nearby" : "العثور على مطاعم قريبة",
-  "restaurant_near_from_you" : "مطعم قريب منك",
+  "restaurant_near_from_you" : "قريب منك",
   "are_you_hungry": "هل جائع",
   "latest": "آخر",
   "top_rated": "أعلى تقييما",
@@ -985,7 +985,7 @@
   "restaurant_is_unavailable" : "المطعم غير متوفر",
   "schedule" : "جدول",
   "currently_digital_payment_is_not_available" : "حاليا الدفع الرقمي غير متوفر",
-  "all_food_items" : "جميع المواد الغذائية",
+  "all_food_items" : "جميع العناصر",
   "this_is_my_refer_code" : "هذا هو رمز الإحالة الخاص بي",
   "instance_order_is_not_active" : "ترتيب المثيل غير نشط",
   "joined" : "انضم",
