--- a/assets/language/bn.json
+++ b/assets/language/bn.json
@@ -52,7 +52,7 @@
   "find_your_desired_food_by_categories": "ক্যাটেগরি থেকে আপনার কাঙ্ক্ষিত খাবারটি সার্চ করুন",
   "popular_foods_nearby": "আপনার কাছের জনপ্রিয় খাবার",
   "restaurants": "রেস্টুরেন্ট",
-  "all_restaurants": "সব রেস্টুরেন্ট",
+  "all_restaurants": "সব বিক্রেতা",
   "please_enter_mobile": "দয়া করে আপনার নিবন্ধিত মোবাইল নম্বর দিন যাতে আপনার পাসওয়ার্ডটি পুনরুদ্ধার করতে সহায়তা করতে পারি।",
   "done": "সম্পন্ন",
   "enter_new_password": "আপনার নতুন পাসওয়ার্ড দিন",
@@ -96,7 +96,7 @@
   "enter_promo_code": "প্রমো কোড দিন",
   "apply": "এপলাই করুন",
   "delivery_type": "ডেলিভারির ধরণ ",
-  "home_delivery": "হোম ডেলিভারি",
+  "home_delivery": "ডেলিভারি",
   "take_away": "টেক এওয়ে",
   "item_price": "আইটেমের দাম",
   "vat_tax": "ভ্যাট/ট্যাক্স",
@@ -163,7 +163,7 @@
   "pick_address": "এড্রেস পিক",
   "are_you_sure_to_reset": "আপনি কি রিসেট করতে চান?",
   "if_you_change_location": "আপনার কার্টে কিছু খাবার আছে। যদি নিজের লোকেশন পরিবর্তন করেন তবে আপনার কার্ট এবং আপনার বর্তমান ডেলিভারি লোকেশনের সাথে সম্পর্কিত অন্যান্য ডেটা রিসেট করা হবে।",
-  "if_you_continue": "আপনার কার্টে অন্য রেস্টুরেন্ট থেকে খাবার এড করেছেন, আপনি যদি চালিয়ে যান তবে কার্ট থেকে আপনার পূর্ববর্তী সমস্ত খাবার সরানো হবে।",
+  "if_you_continue": "আপনার কার্টে অন্য বিক্রেতার একটি আইটেম রয়েছে। আপনি যদি চালিয়ে যান, তাহলে আপনার কার্টের সমস্ত আগের আইটেম সরিয়ে ফেলা হবে।",
   "yes_and_continue": "হ্যাঁ এবং চালিয়ে যান",
   "total_order": "মোট অর্ডার",
   "dark_theme": "ডার্ক থিম",
@@ -189,7 +189,7 @@
   "order_placed": "অর্ডার হয়েছে",
   "order_confirmed": "অর্ডার কনফার্ম করা হলো",
   "preparing_food": "খাবার তৈরী করছি",
-  "food_on_the_way": "খাবার আসছে",
+  "food_on_the_way": "অর্ডার পথে",
   "view_on_map": "ম্যাপ দেখুন",
   "back_to_home": "হোমে যান",
   "trip_route": "ট্রিপ রুট",
@@ -338,9 +338,9 @@
   "password_updated_successfully": "পাসওয়ার্ড সফলভাবে আপডেট হয়েছে",
   "new_address_added_successfully": "নতুন এড্রেস সফলভাবে যুক্ত হয়েছে",
   "restaurant_reviews": "রেস্টুরেন্ট রিভিউ",
-  "popular_restaurants": "জনপ্রিয় রেস্টুরেন্ট",
+  "popular_restaurants": "জনপ্রিয় বিক্রেতা",
   "new_on": "নতুন",
-  "restaurant_is_closed": "রেস্টুরেন্ট বন্ধ আছে",
+  "seller_is_closed": "বিক্রেতা বন্ধ",
   "id": "আইডি",
   "no_review_found": "কোন রিভিউ পাওয়া যায়নি",
   "delivery_time": "ডেলিভারি সময়",
@@ -593,7 +593,7 @@
   "vehicle_type": "গাড়ির ধরন",
   "please_select_vehicle_for_the_deliveryman": "ডেলিভারিম্যানের জন্য গাড়ি সিলেক্ট করুন",
   "you_did_not_select_select_any_reason": "আপনি কোন কারণ সিলেক্ট করেন নি।",
-  "recently_viewed_restaurants": "কিছুক্ষণ আগে দেখা রেস্টুরেন্ট",
+  "recently_viewed_restaurants": "সম্প্রতি দেখা বিক্রেতা",
   "order_type": "অর্ডার টাইপ",
   "regular_order": "রেগুলার অর্ডার",
   "place_an_order_and_enjoy": "একটি অর্ডার করুন এবং উপভোগ করুন",
@@ -801,7 +801,7 @@
   "convert_to_currency_now": "কারেন্সীতে কনভার্ট  করুন",
   "earn_money_to_your_wallet_by_completing_the_offer_challenged": "অফার এবং চ্যালেঞ্জ ম্পূর্ণ করে আপনার ওয়ালেটে অর্থ উপার্জন করুন",
   "convert_your_loyalty_points_into_wallet_money": "লয়াল্টি পয়েন্টস ওয়ালেটে কনভার্ট  করুন",
-  "amin_also_reward_their_top_customers_with_wallet_money": "অ্যাডমিন তাদের টপ গ্রাহকদের ওয়ালেট মানি দিয়ে পুরস্কৃত করে",
+  "amin_also_reward_their_top_customers_with_wallet_money": "আমিন তাদের শীর্ষ ক্রেতাদের ওয়ালেট মানি দিয়ে পুরস্কৃত করে",
   "send_your_wallet_money_while_order": "অর্ডার করার সময় আপনার ওয়ালেটের টাকা পাঠান",
 
   "wallet_history": "ওয়ালেট হিস্ট্রি",
@@ -901,7 +901,7 @@
   "here_is_what_you_might_like_to_test": "আপনি যা টেস্ট করতে পছন্দ করেন তা এখানে পাবেন",
   "restaurant_url_copied": "রেস্টুরেন্ট ইউআরএল কোপিয়েড",
   "find_nearby" : "আশেপাশে খুঁজুন",
-  "restaurant_near_from_you" : "আপনার কাছাকাছি রেস্টুরেন্ট",
+  "restaurant_near_from_you" : "আপনার কাছাকাছি",
   "are_you_hungry": "আপনি কী ক্ষুধার্ত !!",
   "latest": "লেটেস্ট",
   "top_rated": "টপ রেটেড",
@@ -981,7 +981,7 @@
   "restaurant_is_unavailable" : "রেস্টুরেন্ট অনুপলব্ধ",
   "schedule" : "সময়সূচী",
   "currently_digital_payment_is_not_available" : "বর্তমানে ডিজিটাল পেমেন্ট পাওয়া যায় না",
-  "all_food_items" : "সমস্ত খাদ্য আইটেম",
+  "all_food_items" : "সব আইটেম",
   "this_is_my_refer_code" : "এই আমার রেফার কোড",
   "instance_order_is_not_active" : "ইনস্ট্যান্স অর্ডার সক্রিয় নয়",
   "joined" : "যোগদান করেছেন",
