--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -52,7 +52,7 @@
   "find_your_desired_food_by_categories": "Find your desired food by categories",
   "popular_foods_nearby": "Popular Foods Nearby",
   "restaurants": "Restaurants",
-  "all_restaurants": "All Restaurants",
+  "all_restaurants": "All Seller",
   "please_enter_mobile": "Please enter your registered Mobile Number so that we can help you to recover your password.",
   "done": "Done",
   "enter_new_password": "Enter your new password and confirm.",
@@ -96,7 +96,7 @@
   "enter_promo_code": "Enter Promo Code",
   "apply": "Apply",
   "delivery_type": "Delivery Type",
-  "home_delivery": "Home Delivery",
+  "home_delivery": "Delivery",
   "take_away": "Take Away",
   "item_price": "Item Price",
   "vat_tax": "Vat/Tax",
@@ -163,7 +163,7 @@
   "pick_address": "Pick Address",
   "are_you_sure_to_reset": "Are you sure want to reset?",
   "if_you_change_location": "You have some foods in your cart. If you change your location, your cart and other data related to your current delivery location will be reset.",
-  "if_you_continue": "You have food from another restaurant in cart. If you continue, your all previous food from cart will be removed.",
+  "if_you_continue": "You have an item from another seller in the cart. If you continue, all previous items in the cart will be removed.",
   "yes_and_continue": "Yes and Continue",
   "total_order": "Total Order",
   "dark_theme": "Dark Theme",
@@ -189,7 +189,7 @@
   "order_placed": "Order Placed",
   "order_confirmed": "Order Confirmed",
   "preparing_food": "Preparing Food",
-  "food_on_the_way": "Food on the way",
+  "food_on_the_way": "Order on the way",
   "view_on_map": "View on Map",
   "back_to_home": "Back to Home",
   "trip_route": "Trip Route",
@@ -338,9 +338,9 @@
   "password_updated_successfully": "Password updated successfully",
   "new_address_added_successfully": "New address added successfully",
   "restaurant_reviews": "Restaurant Reviews",
-  "popular_restaurants": "Popular Restaurants",
+  "popular_restaurants": "Popular Seller",
   "new_on": "New on",
-  "restaurant_is_closed": "Restaurant is closed",
+  "seller_is_closed": "Seller is closed",
   "id": "ID",
   "no_review_found": "No review found",
   "delivery_time": "Delivery Time",
@@ -586,7 +586,7 @@
   "vehicle_type": "Vehicle Type",
   "please_select_vehicle_for_the_deliveryman": "Please select vehicle for the deliveryman",
   "you_did_not_select_select_any_reason": "You did not select select any reason.",
-  "recently_viewed_restaurants": "Recently Viewed Restaurants",
+  "recently_viewed_restaurants": "Recently Viewed Seller",
   "order_type": "Order Type",
   "regular_order": "Regular Order",
   "place_an_order_and_enjoy": "Place an order and enjoy",
@@ -892,7 +892,7 @@
   "here_is_what_you_might_like_to_test": "Here's what you might like to test",
   "restaurant_url_copied": "Restaurant url copied",
   "find_nearby": "Find Nearby",
-  "restaurant_near_from_you": "Restaurant Near from You",
+  "restaurant_near_from_you": "Near from You",
   "are_you_hungry": "Are you hungry !!",
   "latest": "Latest",
   "top_rated": "Top Rated",
@@ -968,7 +968,7 @@
   "restaurant_is_unavailable" : "Restaurant is unavailable",
   "schedule" : "Schedule",
   "currently_digital_payment_is_not_available" : "Currently digital payment is not available",
-  "all_food_items" : "All Food Items",
+  "all_food_items" : "All Items",
   "this_is_my_refer_code" : "This is my refer code",
   "instance_order_is_not_active" : "Instance order is not active",
   "review_submitted_successfully" : "Review submitted successfully",
