--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -52,7 +52,7 @@
   "find_your_desired_food_by_categories": "Encuentra tu comida deseada por categorías",
   "popular_foods_nearby": "Alimentos populares cercanos",
   "restaurants": "Restaurantes",
-  "all_restaurants": "Todos los restaurantes",
+  "all_restaurants": "Todos los Vendedores",
   "please_enter_mobile": "Ingrese su número de teléfono móvil registrado para que podamos ayudarlo a recuperar su contraseña.",
   "done": "Hecho",
   "enter_new_password": "Ingrese su nueva contraseña y confirme la contraseña.",
@@ -96,7 +96,7 @@
   "enter_promo_code": "Introduce el código de promoción",
   "apply": "Solicitar",
   "delivery_type": "tipo de entrega",
-  "home_delivery": "Entrega a domicilio",
+  "home_delivery": "Entrega",
   "take_away": "Quitar",
   "item_price": "Precio del articulo",
   "vat_tax": "IVA/impuesto",
@@ -163,7 +163,7 @@
   "pick_address": "Dirección de selección",
   "are_you_sure_to_reset": "¿Estás seguro de que quieres reiniciar?",
   "if_you_change_location": "Tienes algunos alimentos en tu carrito. Si cambia su ubicación, su carrito y otros datos relacionados con su ubicación de entrega actual se restablecerán.",
-  "if_you_continue": "Tienes comida de otro restaurante en el carrito. Si continúa, todos sus alimentos anteriores del carrito serán eliminados.",
+  "if_you_continue": "Tienes un artículo de otro vendedor en el carrito. Si continúas, todos los artículos anteriores en el carrito se eliminarán.",
   "yes_and_continue": "Si y continuar",
   "total_order": "Orden total",
   "dark_theme": "Tema oscuro",
@@ -189,7 +189,7 @@
   "order_placed": "Pedido realizado",
   "order_confirmed": "orden confirmada",
   "preparing_food": "Preparando comida",
-  "food_on_the_way": "Comida en camino",
+  "food_on_the_way": "Pedido en camino",
   "view_on_map": "Ver en el mapa",
   "back_to_home": "De vuelta a casa",
   "trip_route": "Ruta de viaje",
@@ -338,9 +338,9 @@
   "password_updated_successfully": "Contraseña actualizada exitosamente",
   "new_address_added_successfully": "Nueva dirección agregada con éxito",
   "restaurant_reviews": "Reseñas de restaurantes",
-  "popular_restaurants": "Restaurantes populares",
+  "popular_restaurants": "Vendedor Popular",
   "new_on": "Nuevo sobre",
-  "restaurant_is_closed": "El restaurante está cerrado",
+  "seller_is_closed": "El vendedor está cerrado",
   "id": "IDENTIFICACIÓN",
   "no_review_found": "No se encontró ninguna revisión",
   "delivery_time": "El tiempo de entrega",
@@ -586,7 +586,7 @@
   "vehicle_type": "tipo de vehiculo",
   "please_select_vehicle_for_the_deliveryman": "Seleccione el vehículo para el repartidor",
   "you_did_not_select_select_any_reason": "No seleccionó ningún motivo.",
-  "recently_viewed_restaurants": "Restaurantes recientemente vistos",
+  "recently_viewed_restaurants": "Vendedor Visto Recientemente",
   "order_type": "Tipo de orden",
   "regular_order": "Orden regular",
   "place_an_order_and_enjoy": "Hacer un pedido y disfrutar",
@@ -793,7 +793,7 @@
   "convert_to_currency_now": "Convertir a moneda ahora",
   "earn_money_to_your_wallet_by_completing_the_offer_challenged": "Gane dinero a su billetera completando la oferta y desafiado",
   "convert_your_loyalty_points_into_wallet_money": "Convierta sus puntos de fidelización en dinero de la billetera",
-  "amin_also_reward_their_top_customers_with_wallet_money": "Amin también recompensa a sus mejores clientes con dinero de billetera",
+  "amin_also_reward_their_top_customers_with_wallet_money": "Amin también recompensa a sus mejores compradores con dinero de billetera.",
   "send_your_wallet_money_while_order": "Envíe su dinero de su billetera mientras pedía",
   "wallet_history": "Historia de la billetera",
   "valid_till": "Válido hasta",
@@ -890,7 +890,7 @@
   "here_is_what_you_might_like_to_test": "Aquí está lo que te gustaría probar",
   "restaurant_url_copied": "URL del restaurante copiado",
   "find_nearby": "Encuentra cerca",
-  "restaurant_near_from_you": "Restaurante cerca de ti",
+  "restaurant_near_from_you": "Cerca de ti",
   "are_you_hungry": "¿Tienes hambre?",
   "latest": "Último",
   "top_rated": "Más valorado",
@@ -969,7 +969,7 @@
   "restaurant_is_unavailable": "El restaurante no está disponible",
   "schedule": "Horario",
   "currently_digital_payment_is_not_available": "Actualmente, el pago digital no está disponible",
-  "all_food_items": "Todos los ítems de comida",
+  "all_food_items": "Todos los artículos",
   "this_is_my_refer_code": "Este es mi código de referencia",
   "instance_order_is_not_active": "La orden de instancia no está activa",
   "joined" : "Unida",
